--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,28 +4,31 @@ services:
   db:
     image: postgres:14.1-alpine
     restart: always
-    container_name: db
+    container_name: mediar_db
     environment:
       - POSTGRES_DB=mediar
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data
+    volumes:
+      #- data:/db/data
+      - pgdata:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
     healthcheck:
         test: "exit 0"
 
   mediar:
     restart: always
-    build: .
+    build: mediar
     container_name: mediar
     ports:
-      - "8080:8080"
+      - "8081:8081"
     depends_on:
       db:
         condition: service_healthy
-
   nginx:
     environment:
-      - PORTNGINX=8080
+      - PORTNGINX=8081
     restart: always
     build:
       context: ./nginx
@@ -35,3 +38,7 @@ services:
       - mediar
     ports:
       - "81:81"
+
+volumes:
+  pgdata:
+   external: true
