--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
 
     location / {
         include uwsgi_params;
-        uwsgi_pass mediar:8080;
-        client_max_body_size 20M;
+        uwsgi_pass 192.168.56.1:8081;
+        client_max_body_size 40M;
     }
 }
