--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   db:
     image: postgres:14.1-alpine
     restart: always
-    container_name: mediar_db
+    container_name: db
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_DB=mediar
       - POSTGRES_USER=postgres
