--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     restart: always
     container_name: db
     ports:
-      - "5432:5432"
+      - "5433:5433"
     environment:
-      - POSTGRES_DB=mediar
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data
